--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,5 +37,12 @@
     "compilerOptions": {
       "module": "CommonJS"
     }
-  }
+  },
+  "include": [
+    "./config/jest/setupTests.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+    "./src/**/*.js",
+    "./config/storybook/*.js"
+  ]
 }
