--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,8 @@
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx",
+    "./src/**/*.*.tsx",
+    "./src/**/*.*.ts",
     "./src/**/*.js",
     "./config/storybook/*.js"
   ]
