--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "homepage": "https://github.com/NikolaiSenko/TestProject#readme",
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.22.0",
+    "@babel/plugin-transform-typescript": "^7.22.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
@@ -54,10 +56,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.4.3",
+    "@types/circular-dependency-plugin": "^5.0.5",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -65,6 +68,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "babel-loader": "^8.2.3",
+    "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
     "eslint": "^8.34.0",
@@ -77,18 +81,19 @@
     "eslint-plugin-senko-plugin": "^0.0.0",
     "eslint-plugin-storybook": "^0.6.10",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "json-server": "^0.17.2",
-    "loki": "^0.31.1",
+    "loki": "^0.31.2",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.14.0",
     "reg-cli": "^0.17.7",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
-    "storybook-react-i18next": "^1.1.2",
+    "storybook-addon-mock": "^2.4.1",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
@@ -105,12 +110,12 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "concurrently": "^7.6.0",
-    "i18next": "^21.6.11",
+    "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-redux": "^7.2.9",
     "react-router-dom": "^6.2.1"
   },
