--- a/package.json
+++ b/package.json
@@ -107,13 +107,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@react-spring/web": "^9.5.2",
     "@reduxjs/toolkit": "^1.9.3",
+    "@use-gesture/react": "^10.2.19",
     "axios": "^1.3.4",
     "concurrently": "^7.6.0",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-redux": "^7.2.9",
