add cypress, refactor storybook, update storybook, write e2e tests for components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,8 @@
     "./src/**/*.*.tsx",
     "./src/**/*.*.ts",
     "./src/**/*.js",
-    "./config/storybook/*.js"
+    "./config/storybook/*.js",
+    "config/storybook/preview.ts",
+    "config/storybook/main.ts"
   ]
 }
