--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,3 @@
-# name: linting, testing, building
-# run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-# on:
-#   push:
-#     branches: [my_develop]
-#   pull_request:
-#     branches: [my_develop]
-# jobs:
-#   Pipeline:
-#     runs-on: windows-2019
-#     strategy:
-#       matrix:
-#         node-version: [16.x]
-
-#     steps:
-#       - uses: actions/checkout@v2
-#       - name: Staring Node.js ${{ matrix.node-version }}
-#         uses: actions/setup-node@v1
-#         with:
-#           node-version: ${{ matrix.node-version }}
-#       - name: install modules
-#         run: npm install
-#       - name: build production project
-#         run: npm run build:prod
-#         if: always()
-#       - name: linting typescript
-#         run: npm run lint:ts
-#         if: always()
-#       - name: linting css
-#         run: npm run lint:scss
-#       - name: unit testing
-#         if: always()
-#         run: npm run test:unit
-#       - name: build storybook
-#         run: npm run storybook:build
-#         if: always()
-
 name: linting, testing, building
 on:
   push:
@@ -98,7 +61,7 @@ jobs:
         uses: actions/deploy-pages@v1
 
   checks:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     strategy:
       matrix:
         node-version: [17.x]
