--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "test:e2e": "cypress open",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "loki --requireReference --reactUri file:./storybook-static",
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
-    "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "storybook:build": "build-storybook -c ./config/storybook",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "storybook:build": "storybook build -c ./config/storybook",
     "create:slice": "node ./scripts/createSlice/index.js",
-    "postinstall": "node ./scripts/clear-cache.js"
+    "postinstall": "node ./scripts/clear-cache.js",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -46,14 +48,16 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "0.0.13",
+    "@storybook/addon-actions": "^7.0.25",
+    "@storybook/addon-essentials": "^7.0.25",
+    "@storybook/addon-interactions": "^7.0.25",
+    "@storybook/addon-links": "^7.0.25",
+    "@storybook/blocks": "^7.0.25",
+    "@storybook/cli": "^7.0.25",
+    "@storybook/react": "^7.0.25",
+    "@storybook/react-vite": "^7.0.25",
+    "@storybook/react-webpack5": "^7.0.25",
+    "@storybook/testing-library": "0.2.0",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -75,6 +79,7 @@
     "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
+    "cypress": "^11.0.0",
     "eslint": "^8.34.0",
     "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-import": "^2.27.5",
@@ -82,8 +87,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-senko-plugin": "^0.0.6",
-    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-senko-plugin": "^0.0.7",
+    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-unused-imports": "^2.0.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
@@ -92,21 +97,21 @@
     "jest": "^27.5.1",
     "json-server": "^0.17.2",
     "lint-staged": "^13.2.2",
-    "loki": "^0.31.2",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.14.0",
     "reg-cli": "^0.17.7",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
-    "storybook-addon-mock": "^2.4.1",
+    "storybook": "^7.0.25",
+    "storybook-addon-mock": "^4.0.0",
     "storybook-addon-themes": "^6.1.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-standard-scss": "^3.0.0",
-    "ts-loader": "^9.2.6",
+    "ts-loader": "^9.4.3",
     "ts-morph": "^18.0.0",
-    "ts-node": "^10.5.0",
+    "ts-node": "^10.8.1",
     "typescript": "^4.5.5",
     "vite": "^4.3.9",
     "vite-plugin-svgr": "^3.2.0",
@@ -118,7 +123,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@react-spring/web": "^9.5.2",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@use-gesture/react": "^10.2.19",
     "axios": "^1.3.4",
     "concurrently": "^7.6.0",
@@ -129,7 +134,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
-    "react-redux": "^7.2.9",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.2.1"
   },
   "loki": {
